--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -2,7 +2,7 @@
   height: 100vh;
   max-width: 992px;
   margin: 0 auto;
-  padding: 2.5rem 2rem;
+  padding: 1rem 2rem;
 
   display: flex;
   flex-direction: column;
@@ -10,6 +10,7 @@
 
 .container section {
   flex: 1;
+  margin-top: 25px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 6.25rem;
